k8s/ingress/secureops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secureops-ingress
  namespace: secureops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8001

          - path: /api/scan
            pathType: Prefix
            backend:
              service:
                name: scan-api
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
